Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127705

Android splashscreen not removed

XMLWordPrintable

    • Android
    • e40d9d436 (dev), a94b3ae10 (6.10), d1be51d38 (6.10), ec0928c6c (dev), 5ef73686c (dev), 089287cc5 (6.10), 5864dded1 (6.9), a113197fe (dev), 339e84103 (6.10), 6232e1fcd (6.9)
    • 2024wk38s2FOQtforAndroid, 2024wk34s2FOQtforAndroid, 2024wk36s2FOQtforAndroid, 2024wk40s3FOQtforAndroid, 2024wk42s3FOQtforAndroid, 2024wk44s3FOQtforAndroid, 2024wk46s3FOQtforAndroid, 2024wk48s3FOQtforAndroid, 2025wk02s3FOQtforAndroid, 2025wk04s3FOQtforAndroid, 2025wk06s1QtforAndroid, 2025wk08s1QtforAndroid, 2025wk10s1QtforAndroid, 2025wk12s1QtforAndroid, 2025wk14s1QtforAndroid, 2025wk16s1QtforAndroid, 2025wk18s1QtforAndroid, 2025wk20s1QtforAndroid, 2025wk22s1-2QtforAndroid, 2025wk24s2QtforAndroid, 2025wk26s2QtforAndroid, 2025wk28s2QtforAndroid, 2025wk30s2QtforAndroid, 2025wk38s2QtforAndroid, 2025wk40s2-3QtforAndroid, 2025wk42s3QtforAndroid, 2025wk44s3QtforAndroid

      The android splashscreen is not removed also if the method

      QNativeInterface::QAndroidApplication::hideSplashScreen()

      is called. Is possible to test using the demo app here:

      https://github.com/FalsinSoft/QtAndroidTools

      If you compile the app using version 6.7.2 and run on a device you can see the initial spashscreen. The problem is when you close the app you can see the splashscreen again for around half second and this is a very bad bug...

        1. faulty-qt-app.mov
          3.17 MB
          Assam Boudjelthia
        2. phone-app.mov
          2.53 MB
          Assam Boudjelthia
        3. splash.mp4
          3.05 MB
          Jani Korteniemi
        4. working-qt-app.mov
          3.54 MB
          Assam Boudjelthia
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.