Destroy window surface after exit transition for Qt for Android apps

Splash screen (or blank launch screen) is shown when exiting the
Android application caused by hiding shown windows and destroying it's
surface before application exit. On application exit all windows are
first set to invisible then surfaces destroyed and finally removed from
layout. Also window opacity change can show underlying splash screen as
it is set as theme for the application.

When pressing Android device's back button application either should
hide current window or exit the application.
When exiting current window should be visible during application exit.

Add AtomicBoolean m_canBeDestroyed to QtWindow for blocking normal
surface removal.
Set false by default from QtActivityDelegate.addTopLevelWindow and
changed from QAndroidPlatformWindow::setVisible() dependent on if
there are more visible windows present. Destroy last window with
delay so it can be shown during app exit.

In QtActivityDelegate.setUpSplashScreen() set layout to use android
device's DayNight theme colors to not show splash screen theme if
window opacity is changed.

Fixes: QTBUG-127705
Fixes: QTBUG-124140
Pick-to: 6.8 6.9
Change-Id: I74adf693dac599c0b46b1f427e563683c1033565
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit e40d9d43614b71c803a92fc640fc66f9a96cb095)